Fixed z-index

--- a/css/drawings.css
+++ b/css/drawings.css
@@ -59,6 +59,7 @@
     inset: 0;
     background-color: rgba(0, 0, 0, 0.8);
     backdrop-filter: blur(20px);
+    z-index: 1111;
 }
 
 #preview img {
